config allowheaders